--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -23,14 +23,33 @@ html, body {
   position: relative;
   width: auto;
   min-height: 100vh;
+  background: linear-gradient(to top, rgb(245, 245, 245), transparent 30%);
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(to top, rgb(245, 245, 245), transparent 30%);
-  .cover-content{
+  .cover-text{
+    position: absolute;
     text-align: center;
     margin: 10px;
     margin-top: 0;
+    .cover-text-img{
+      transform: translateY(-150px);
+      z-index: 1;
+      position: unset;
+      top: 0;
+      left: 0;
+      width: 13%;
+      height: 13%;
+      pointer-events: none;
+      filter: brightness(100%);   
+    }
+    p{
+      color: rgb(250, 250, 250);
+      font-size: 16px;
+      transform: translateY(-140px);
+      letter-spacing: 1px;
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    }
   }
   img{
     z-index: -1;
@@ -53,15 +72,19 @@ html, body {
   text-align: center;
   h1{
     font-size: 28px;
-    font-weight: bold;
     color: rgb(15, 15, 15);
     margin-bottom: 45px;
+    font-weight: bold;
+    &#servicesFirstText{
+      font-weight: unset;
+    }
   }
   .border{
     background: rgb(100, 100, 100);
     height: 2px;
     width: 65%;
-    margin: 0 auto;
+    margin: 20px auto;
+    transform: translateY(20px);
   }
   .icon{
     backdrop-filter: blur(20px);
@@ -83,7 +106,6 @@ html, body {
       color: black;
       padding: 5px;
       margin-bottom: 10px;
-      font-weight: bold;
     }
     p{
       display: none;
@@ -133,6 +155,7 @@ html, body {
     height: auto;
     margin: 20px auto;
     position: relative;
+    border-radius: 15px;
     .border{
       background: rgb(130, 130, 130);
       transform: translateY(-60px);
@@ -288,7 +311,7 @@ html, body {
 
   }
   form{
-    background: rgb(235, 235, 235);
+    background: rgb(220, 220, 220);
     border-radius: 150px;
     padding: 10px;
     label{
