--- a/static/scss/userprofile/login.css
+++ b/static/scss/userprofile/login.css
@@ -1,41 +1,97 @@
-#logInForm {
-  text-align: center;
-  width: 100%;
-  height: auto;
-  padding: 20px;
+.login-signup #loginForm {
+  width: auto;
+  display: none;
 }
 
-#logInForm #submit {
+.login-signup #loginForm input {
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 3px;
+}
+
+.login-signup #loginForm label {
+  font-weight: bold;
+}
+
+.login-signup #loginForm .form-flex-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
+}
+
+.login-signup #loginForm .form-flex-text label {
+  width: 50%;
+}
+
+.login-signup #loginForm .form-flex-input {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 10px;
+  margin-top: 0;
+}
+
+.login-signup #loginForm .form-flex-input input {
+  width: 50%;
+  margin-right: 5px;
+  margin-left: 5px;
+}
+
+.login-signup #loginForm #submit {
   text-align: center;
   width: auto;
-  margin: 40px;
 }
 
-#logInForm #submit #logInButton {
-  color: #323232;
+.login-signup #loginForm button {
+  margin: 15px;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.login-signup #loginForm span {
+  margin: 15px;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.login-signup #loginForm #logInButton {
+  border-radius: 30px;
+  border: 2px solid black;
+  color: #1e1e1e;
+  display: inline-block;
+  text-decoration: none;
+  width: 60%;
+  font-size: 18px;
   padding: 5px;
-  border: 1px solid #2d9cb3;
-  width: 100%;
-  text-align: center;
-  background: rgba(230, 230, 230, 0.9);
-  text-transform: uppercase;
-  -webkit-transition: .3s;
-  transition: .3s;
-}
-
-#logInForm #submit #logInButton:hover {
-  background: #2d9cb3;
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+  background: black;
   color: white;
 }
 
-#logInForm #submit #logInButton:active {
-  background: #2d9cb3;
-  color: white;
+.login-signup #loginForm span {
+  border-radius: 30px;
+  border: 2px solid black;
+  color: #1e1e1e;
+  display: inline-block;
+  text-decoration: none;
+  width: 60%;
+  font-size: 18px;
+  padding: 5px;
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+  background: white;
+  color: black;
 }
 
-@media only screen and (min-device-width: 640px) {
-  #logInForm #logInButton {
-    width: 30%;
-  }
+.login-signup #loginForm.active {
+  display: block;
 }
 /*# sourceMappingURL=login.css.map */
