--- a/static/scss/userprofile/login.scss
+++ b/static/scss/userprofile/login.scss
@@ -1,40 +1,77 @@
 // STANDARD PHONE
-#logInForm{
-    text-align: center;
-    width: 100%;
-    height: auto;
-    padding: 20px;
-    #submit{
-        text-align: center;
+.login-signup{
+    #loginForm{
         width: auto;
-        margin: 40px;
-        #logInButton{
-            color: rgb(50, 50, 50);
-            padding: 5px;
-            border: 1px solid #2d9cb3;
-            width: 100%;
+        display: none;
+        input{
+            border: 1px solid black;
+            border-radius: 5px;
+            padding: 3px;
+        }
+        label{
+            font-weight: bold;
+        }
+        .form-flex-text{
+            display: flex;
+            text-align: center;   
+            label{
+                width: 50%;
+            }
+        }
+        .form-flex-input{
+            display: flex;
+            align-items: center;
+            justify-content: center;  
+            margin: 10px;
+            margin-top: 0;
+            input{
+                width: 50%;
+                margin-right: 5px;
+                margin-left: 5px;
+            }
+        }
+        #submit{
             text-align: center;
-            background: rgba(230, 230, 230, 0.9);
-            text-transform: uppercase;
-            transition: .3s;
-            &:hover{
-                background: #2d9cb3;
-                color: white;
-            }
-            &:active{
-                background: #2d9cb3;
-                color: white;
-            }
+            width: auto;
+        }
+        button{
+            margin: 15px;
+            margin-left: 0;
+            margin-right: 0;
+        }
+        span{
+            margin: 15px;
+            margin-left: 0;
+            margin-right: 0;
+        }
+        #logInButton{
+            border-radius: 30px;
+            border: 2px solid black;
+            color: rgb(30, 30, 30);
+            display: inline-block;
+            text-decoration: none;
+            width: 60%;
+            font-size: 18px;
+            padding: 5px;
+            transition: all .5s ease-in-out;
+            background: black;
+            color: white;
+        }
+        span{
+            border-radius: 30px;
+            border: 2px solid black;
+            color: rgb(30, 30, 30);
+            display: inline-block;
+            text-decoration: none;
+            width: 60%;
+            font-size: 18px;
+            padding: 5px;
+            transition: all .5s ease-in-out;
+            background: white;
+            color: black;
+        }
+        &.active{
+            display: block;
         }
     }
 }
-
-// TABLET TO ALL
-@media only screen and (min-device-width:640px) {
-    #logInForm{
-        #logInButton{
-            width: 30%;
-        }
-    }
-} 
- 
