--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -19,8 +19,6 @@ html, body {
   position: relative;
   width: auto;
   min-height: 110vh;
-  background: -webkit-gradient(linear, left bottom, left top, from(whitesmoke), color-stop(25%, transparent));
-  background: linear-gradient(to top, whitesmoke, transparent 25%);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -30,6 +28,12 @@ html, body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), url("/static/images/covers/cover-1.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("/static/images/covers/cover-1.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 .cover .cover-text {
@@ -56,20 +60,6 @@ html, body {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.cover img {
-  z-index: -1;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  pointer-events: none;
-  -webkit-filter: brightness(65%);
-          filter: brightness(65%);
-}
-
 .services {
   background: whitesmoke;
   width: 100%;
@@ -77,6 +67,7 @@ html, body {
   padding: 15px;
   padding-top: 40px;
   text-align: center;
+  position: relative;
 }
 
 .services h1 {
@@ -84,6 +75,7 @@ html, body {
   color: #0f0f0f;
   margin-bottom: 25px;
   font-weight: bold;
+  letter-spacing: .5px;
 }
 
 .services h1#servicesFirstText {
@@ -100,8 +92,6 @@ html, body {
 }
 
 .services .icon {
-  -webkit-backdrop-filter: blur(20px);
-          backdrop-filter: blur(20px);
   margin-bottom: 15px;
   width: 45%;
   height: auto;
@@ -196,7 +186,7 @@ html, body {
 
 .product-section .product-card .text .product-name {
   padding: 10px;
-  font-size: 22px;
+  font-size: 26px;
   font-weight: bold;
 }
 
@@ -221,17 +211,17 @@ html, body {
 }
 
 .product-section .product-card .buttons-product-section a {
-  border-radius: 10px;
+  border-radius: 5px;
   border: 2px solid transparent;
   font-size: 18px;
   margin: 10px;
   width: 50%;
   padding: 5px;
-  background: #191919;
+  background: #2d2d2d;
   color: white;
 }
 
-.what-we-do {
+.reviews {
   width: 100%;
   height: auto;
   padding-top: 20px;
@@ -240,7 +230,7 @@ html, body {
   text-align: center;
 }
 
-.what-we-do .border {
+.reviews .border {
   background: #646464;
   -webkit-transform: translateY(30px);
           transform: translateY(30px);
@@ -249,18 +239,11 @@ html, body {
   margin: 20px auto;
 }
 
-.what-we-do h1 {
+.reviews h1 {
   font-size: 28px;
   font-weight: bold;
   color: #0f0f0f;
   margin-bottom: 20px;
-}
-
-.what-we-do .text p {
-  margin: 0 auto;
-  width: 90%;
-  font-size: 15px;
-  letter-spacing: 1px;
 }
 
 #frontend {
@@ -327,7 +310,7 @@ html, body {
 
 .about-us h1 {
   font-size: 28px;
-  font-weight: bold;
+  font-weight: 500;
   color: #0f0f0f;
   margin-bottom: 20px;
 }
@@ -370,7 +353,7 @@ html, body {
   padding: 5px;
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
-  background: black;
+  background: #2d2d2d;
   color: white;
   outline: none;
 }
@@ -391,44 +374,46 @@ html, body {
 
 .contact-us h1 {
   font-size: 28px;
-  font-weight: bold;
+  font-weight: 500;
   color: #0f0f0f;
-  margin-bottom: 15px;
+  margin-bottom: 5px;
 }
 
 .contact-us p {
   font-size: 18px;
   color: #0f0f0f;
-  margin-bottom: 15px;
+  margin-bottom: 5px;
 }
 
 .contact-us form {
-  background: gainsboro;
-  border-radius: 150px;
+  text-align: left;
   padding: 10px;
+  margin: 15px;
+  margin-top: 0;
 }
 
 .contact-us form label {
   margin-top: 30px;
   margin-bottom: 10px;
-  font-size: 20px;
-  font-weight: bold;
+  font-size: 16px;
 }
 
-.contact-us form input {
-  width: 60%;
-  border: 1px solid black;
-  border-radius: 7px;
+.contact-us form textarea {
+  width: 100%;
+  border: 1px solid #787878;
+  border-radius: 3px;
   padding: 3px;
 }
 
-.contact-us form input.beskjed {
-  height: 100px;
-  width: 80%;
+.contact-us form input {
+  width: 100%;
+  border: 1px solid #787878;
+  border-radius: 3px;
+  padding: 3px;
 }
 
 .contact-us form .form-actions {
-  margin: 20px;
+  margin-top: 15px;
 }
 
 .contact-us form .form-actions button {
@@ -440,7 +425,7 @@ html, body {
   padding: 5px;
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
-  background: black;
+  background: #2d2d2d;
   color: white;
 }
 
