--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -23,10 +23,14 @@ html, body {
   position: relative;
   width: auto;
   min-height: 110vh;
-  background: linear-gradient(to top, rgb(245, 245, 245), transparent 25%);
   display: flex;
   justify-content: center;
   align-items: center;
+  background:linear-gradient(rgba(0, 0, 0 ,0.4), rgba(0, 0, 0, 0.4)), url("/static/images/covers/cover-1.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;  
   .cover-text{
     transform: translateY(-20px);
     position: absolute;
@@ -47,17 +51,6 @@ html, body {
       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
   }
-  img{
-    z-index: -1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    pointer-events: none;
-    filter: brightness(65%);
-  }
 }
 .services{
   background: rgb(245, 245, 245);
@@ -66,11 +59,13 @@ html, body {
   padding: 15px;
   padding-top: 40px;
   text-align: center;
+  position: relative;
   h1{
     font-size: 28px;
     color: rgb(15, 15, 15);
     margin-bottom: 25px;
     font-weight: bold;
+    letter-spacing: .5px;
     &#servicesFirstText{
       font-weight: unset;
     }
@@ -83,7 +78,6 @@ html, body {
     transform: translateY(20px);
   }
   .icon{
-    backdrop-filter: blur(20px);
     margin-bottom: 15px;
     width: 45%;
     height: auto;
@@ -163,7 +157,7 @@ html, body {
     .text{
       .product-name{
         padding: 10px;
-        font-size: 22px;
+        font-size: 26px;
         font-weight: bold;
       }
       .product-price{
@@ -178,19 +172,19 @@ html, body {
       justify-content: center;
       align-items: center;
       a{
-        border-radius: 10px;
+        border-radius: 5px;
         border: 2px solid transparent;
         font-size: 18px;
         margin: 10px;
         width: 50%;
         padding: 5px;
-        background: rgb(25, 25, 25);
+        background: rgb(45, 45, 45);
         color: white;
       }
     }
   }
 }
-.what-we-do{
+.reviews{
   width: 100%;
   height: auto;
   padding-top: 20px;
@@ -209,14 +203,6 @@ html, body {
     font-weight: bold;
     color: rgb(15, 15, 15);
     margin-bottom: 20px;
-  }
-  .text{
-    p{
-      margin: 0 auto;
-      width: 90%;
-      font-size: 15px;
-      letter-spacing: 1px;
-    }
   }
 }
 
@@ -275,7 +261,7 @@ html, body {
   }
   h1{
     font-size: 28px;
-    font-weight: bold;
+    font-weight: 500;
     color: rgb(15, 15, 15);
     margin-bottom: 20px;
   }
@@ -308,7 +294,7 @@ html, body {
       font-size: 16px;
       padding: 5px;
       transition: all .2s ease-in-out;
-      background: black;
+      background: rgb(45, 45, 45);
       color: white;
       outline: none;
       &:hover{
@@ -327,38 +313,39 @@ html, body {
   text-align: center;
   h1{
     font-size: 28px;
-    font-weight: bold;
+    font-weight: 500;
     color: rgb(15, 15, 15);
-    margin-bottom: 15px;
+    margin-bottom: 5px;
   }
   p{
     font-size: 18px;
     color: rgb(15, 15, 15);
-    margin-bottom: 15px;
-
+    margin-bottom: 5px;
   }
   form{
-    background: rgb(220, 220, 220);
-    border-radius: 150px;
+    text-align: left;
     padding: 10px;
+    margin: 15px;
+    margin-top: 0;
     label{
       margin-top: 30px;
       margin-bottom: 10px;
-      font-size: 20px;
-      font-weight: bold;
+      font-size: 16px;
+    }
+    textarea{
+      width: 100%;
+      border: 1px solid rgb(120, 120, 120);
+      border-radius: 3px;
+      padding: 3px;
     }
     input{
-      width: 60%;
-      border: 1px solid black;
-      border-radius: 7px;
+      width: 100%;
+      border: 1px solid rgb(120, 120, 120);
+      border-radius: 3px;
       padding: 3px;
-      &.beskjed{
-        height: 100px;
-        width: 80%;
-      }
     }
     .form-actions{
-      margin: 20px;
+      margin-top: 15px;
       button{
         border-radius: 30px;
         border: 2px solid black;
@@ -367,7 +354,7 @@ html, body {
         font-size: 16px;
         padding: 5px;
         transition: all .2s ease-in-out;
-        background: black;
+        background: rgb(45, 45, 45);
         color: white;
         &:hover{
           background: white;
