--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -249,7 +249,7 @@
 #navbar .login-signup a {
   display: inline-block;
   border-radius: 30px;
-  border: 2px solid black;
+  border: 2px solid #2d2d2d;
   color: #1e1e1e;
   display: inline-block;
   text-decoration: none;
@@ -261,7 +261,7 @@
   padding: 5px;
   -webkit-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
-  background: black;
+  background: #2d2d2d;
   color: white;
 }
 
@@ -288,7 +288,7 @@
 }
 
 #navbar .login-signup .my-account .my-orders {
-  background: black;
+  background: #2d2d2d;
   color: white;
 }
 
