--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -212,7 +212,7 @@ $primaryColor: #2d9cb3;
         a{
             display: inline-block;
             border-radius: 30px;
-            border: 2px solid black;
+            border: 2px solid rgb(45, 45, 45);
             color: rgb(30, 30, 30);
             display: inline-block;
             text-decoration: none;
@@ -223,7 +223,7 @@ $primaryColor: #2d9cb3;
             margin-right: 0;
             padding: 5px;
             transition: all .5s ease-in-out;
-            background: black;
+            background: rgb(45, 45, 45);
             color: white;
             &:nth-child(3){
                 background: white;
@@ -244,7 +244,7 @@ $primaryColor: #2d9cb3;
                 margin-right: 0;
             }
             .my-orders{
-                background: black;
+                background: rgb(45, 45, 45);
                 color: white;
             }
             .my-account-back{
