--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -27,10 +27,13 @@ html, body {
   justify-content: center;
   align-items: center;
   background:linear-gradient(rgba(0, 0, 0 ,0.4), rgba(0, 0, 0, 0.4)), url("/static/images/covers/cover-1.jpg");
-  background-position: center;
   background-repeat: no-repeat;
+  background-position: center;
   background-attachment: fixed;
   background-size: cover;  
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
   .cover-text{
     transform: translateY(-20px);
     position: absolute;
