--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -26,7 +26,7 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background:linear-gradient(rgba(0, 0, 0 ,0.4), rgba(0, 0, 0, 0.4)), url("/static/images/covers/cover-1.jpg");
+  background:linear-gradient(rgba(0, 0, 0 ,0.4), rgba(0, 0, 0, 0.4)), url("/static/images/covers/cover-1.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   -o-background-size: cover;
