--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -29,6 +29,9 @@ html, body {
   background:linear-gradient(rgba(0, 0, 0 ,0.4), rgba(0, 0, 0, 0.4)), url("/static/images/covers/cover-1.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
+  -o-background-attchament: fixed;
+  -moz-background-attchament: fixed;
+  -webkit-background-attchament: fixed;
   -o-background-size: cover;
   -moz-background-size: cover;
   -webkit-background-size:cover;
