--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -11,7 +11,7 @@
 <div class="cover">
    <div class="cover-text">
       <h1>Velkomen til Webiser</h1>
-      <p>Norges største web design og web utviklere team</p>
+      <p>Norges største web design og web utvikling firma</p>
    </div>
 </div>
 <div class="services">
