--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -31,6 +31,7 @@ html, body {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), url("/static/images/covers/cover-1.png");
   background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("/static/images/covers/cover-1.png");
   background-repeat: no-repeat;
+  background-attachment: scroll, fixed;
   background-size: cover;
 }
 
